fixed broken links and ignore Network_Analysis/allSaltTOM_binary-block.1.RData.gz, file too big to upload

--- a/DE_Analysis/DE_Analysis.ipynb
+++ b/DE_Analysis/DE_Analysis.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Overall Summary (tldr):\n",
+    "## Conserved Plasticity:\n",
+    "- Overall we see that out of 111 conserved plastic genes, 90 (81%) move in the same direction as ancestral lines. \n",
+    "- More genes had a more intense response in the salt-adapted lines compared to ancestral lines, but not by much\n",
+    "## Evolved Plasticity Summary:\n",
+    "- Overall we see that average expression increased 2.055 L2F in salt-adapted lines\n",
+    "- Only 97/210 genes (46%) retained their DE status from 0-5g/L into 5-36g/L NaCl\n",
+    "## Lost Plasticity Summary\n",
+    "- Overall we see that almost double the number of genes are closer to ancestral basal expression levels \n",
+    "- For that were not fixed at an ancestral level (384; 77%):\n",
+    "    - 66% Were up-regulated in the ancestral condition, i.e. A5 expression was higher than A0 Expression\n",
+    "    - 54% Were found to be expressed against the trend that the ancestors had, suggesting a reversion to the plastic response (i.e. the ancestral response was maladaptive and pushed fitness in the wrong direction)\n",
+    "    - 36% (92+45) Were found to benifit from the ancestral response to reinforce or tweak the ancestral response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Load Required Libraries"
    ]
   },
@@ -341,10 +360,9 @@
     }
    ],
    "source": [
-    "se<-readRDS(\"../References/DESeq2/read_count_table.SE\")\n",
+    "se<-readRDS(\"../Reference_Files/DE_Analysis/read_count_table.SE\")\n",
     "se$run<-colnames(se)\n",
-    "sampleInfo <- read.csv(\"../References/DESeq2/sampleInfo_Ancestors.csv\") #parent is combined as an ancestor\n",
-    "sampleInfo <- read.csv(\"../References/DESeq2/sampleInfo_Ancestors.csv\")\n",
+    "sampleInfo <- read.csv(\"../Reference_Files/DE_Analysis/sampleInfo_Ancestors.csv\") #parent is combined as an ancestor\n",
     "sampleInfo$sample_nested <- ifelse(sampleInfo$sample == 2935, yes = \"C\", no = sampleInfo$sample_nested)\n",
     "sampleInfo$levels <- ifelse(sampleInfo$selection == \"salt\" & \n",
     "                            (sampleInfo$assay_conc == 0 | sampleInfo$assay_conc == 5), \n",
@@ -1215,6 +1233,29 @@
     "all_expression$Pattern <- ifelse(!all_expression$DE_A & all_expression$DE_S, yes = \"Evolved Plasticity\", no = all_expression$Pattern)\n",
     "\n",
     "table(all_expression$Pattern)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exporting gene lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.csv(rownames(all_expression[all_expression$Pattern == \"Conserved Plasticity\",]), \n",
+    "          file = \"Conserved Plasticity Genes.csv\", row.names=FALSE, quote=FALSE)\n",
+    "write.csv(rownames(all_expression[all_expression$Pattern == \"Constitutive\",]), \n",
+    "          file = \"Constitutive Genes.csv\", row.names=FALSE, quote=FALSE)\n",
+    "write.csv(rownames(all_expression[all_expression$Pattern == \"Loss of Plasticity\",]), \n",
+    "          file = \"Loss of Plasticity Genes.csv\", row.names=FALSE, quote=FALSE)\n",
+    "write.csv(rownames(all_expression[all_expression$Pattern == \"Evolved Plasticity\",]),\n",
+    "          \"Evolved Plasticity Genes.csv\",row.names=FALSE, quote=FALSE)"
    ]
   },
   {
@@ -3076,27 +3117,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Overall Summary (tldr):\n",
-    "## Conserved Plasticity:\n",
-    "- Overall we see that out of 111 conserved plastic genes, 90 (81%) move in the same direction as ancestral lines. \n",
-    "- More genes had a more intense response in the salt-adapted lines compared to ancestral lines, but not by much\n",
-    "## Evolved Plasticity Summary:\n",
-    "- Overall we see that average expression increased 2.055 L2F in salt-adapted lines\n",
-    "- Only 97/210 genes (46%) retained their DE status from 0-5g/L into 5-36g/L NaCl\n",
-    "## Lost Plasticity Summary\n",
-    "- Overall we see that almost double the number of genes are closer to ancestral basal expression levels \n",
-    "- For that were not fixed at an ancestral level (384; 77%):\n",
-    "    - 66% Were up-regulated in the ancestral condition, i.e. A5 expression was higher than A0 Expression\n",
-    "    - 54% Were found to be expressed against the trend that the ancestors had, suggesting a reversion to the plastic response (i.e. the ancestral response was maladaptive and pushed fitness in the wrong direction)\n",
-    "    - 36% (92+45) Were found to benifit from the ancestral response to reinforce or tweak the ancestral response"
+    "### Export the DEGs in the salt lines from 0g/L to 36g/L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>LFC</th><th scope=col>padj</th><th scope=col>DE</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>ADF43159.1</th><td> 1.01959840</td><td>1.164285e-04</td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>ADF43160.1</th><td> 0.03848987</td><td>9.414709e-01</td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>ADF43161.1</th><td>-5.07953994</td><td>2.540306e-12</td><td> TRUE</td></tr>\n",
+       "\t<tr><th scope=row>ADF43162.1</th><td>-0.18237008</td><td>2.981030e-01</td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>ADF43163.1</th><td> 1.18307705</td><td>3.362334e-07</td><td>FALSE</td></tr>\n",
+       "\t<tr><th scope=row>ADF43164.1</th><td> 0.08004285</td><td>8.745458e-01</td><td>FALSE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 3\n",
+       "\\begin{tabular}{r|lll}\n",
+       "  & LFC & padj & DE\\\\\n",
+       "  & <dbl> & <dbl> & <lgl>\\\\\n",
+       "\\hline\n",
+       "\tADF43159.1 &  1.01959840 & 1.164285e-04 & FALSE\\\\\n",
+       "\tADF43160.1 &  0.03848987 & 9.414709e-01 & FALSE\\\\\n",
+       "\tADF43161.1 & -5.07953994 & 2.540306e-12 &  TRUE\\\\\n",
+       "\tADF43162.1 & -0.18237008 & 2.981030e-01 & FALSE\\\\\n",
+       "\tADF43163.1 &  1.18307705 & 3.362334e-07 & FALSE\\\\\n",
+       "\tADF43164.1 &  0.08004285 & 8.745458e-01 & FALSE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 3\n",
+       "\n",
+       "| <!--/--> | LFC &lt;dbl&gt; | padj &lt;dbl&gt; | DE &lt;lgl&gt; |\n",
+       "|---|---|---|---|\n",
+       "| ADF43159.1 |  1.01959840 | 1.164285e-04 | FALSE |\n",
+       "| ADF43160.1 |  0.03848987 | 9.414709e-01 | FALSE |\n",
+       "| ADF43161.1 | -5.07953994 | 2.540306e-12 |  TRUE |\n",
+       "| ADF43162.1 | -0.18237008 | 2.981030e-01 | FALSE |\n",
+       "| ADF43163.1 |  1.18307705 | 3.362334e-07 | FALSE |\n",
+       "| ADF43164.1 |  0.08004285 | 8.745458e-01 | FALSE |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "           LFC         padj         DE   \n",
+       "ADF43159.1  1.01959840 1.164285e-04 FALSE\n",
+       "ADF43160.1  0.03848987 9.414709e-01 FALSE\n",
+       "ADF43161.1 -5.07953994 2.540306e-12  TRUE\n",
+       "ADF43162.1 -0.18237008 2.981030e-01 FALSE\n",
+       "ADF43163.1  1.18307705 3.362334e-07 FALSE\n",
+       "ADF43164.1  0.08004285 8.745458e-01 FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "FALSE  TRUE \n",
+       "16152  1536 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#For Mutations_DEGs.ipynb\n",
+    "res_S036_DEGs_temp <- as.data.frame(results(dds, name = \"selectionsalt.assay_conc36\"))[,c(\"log2FoldChange\", \"padj\")]\n",
+    "\n",
+    "#remove empty rows\n",
+    "res_S036_DEGs <-res_S036_DEGs_temp[!is.na(res_S036_DEGs_temp$padj),]\n",
+    "colnames(res_S036_DEGs) <- c(\"LFC\", \"padj\")\n",
+    "\n",
+    "#DE\n",
+    "res_S036_DEGs$DE <- ifelse(abs(res_S036_DEGs$LFC) >= 2 & res_S036_DEGs$padj <= 0.05, yes = TRUE, no = FALSE)\n",
+    "head(res_S036_DEGs)\n",
+    "table(res_S036_DEGs$DE)\n",
+    "\n",
+    "#Export\n",
+    "write.csv(res_S036_DEGs[res_S036_DEGs$DE == TRUE,], \"S0_S36_DEGs.csv\")"
+   ]
   },
   {
    "cell_type": "raw",
@@ -3247,7 +3363,7 @@
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
-  "toc-showmarkdowntxt": false,
+  "toc-showmarkdowntxt": true,
   "toc-showtags": false
  },
  "nbformat": 4,
