--- a/Reference_Files/Annotation_Files/topGO_Annotation.ipynb
+++ b/Reference_Files/Annotation_Files/topGO_Annotation.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f115927e",
    "metadata": {},
    "outputs": [
     {
@@ -12,8 +11,17 @@
      "text": [
       "Loading required package: BiocGenerics\n",
       "\n",
+      "Loading required package: parallel\n",
+      "\n",
       "\n",
       "Attaching package: ‘BiocGenerics’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:parallel’:\n",
+      "\n",
+      "    clusterApply, clusterApplyLB, clusterCall, clusterEvalQ,\n",
+      "    clusterExport, clusterMap, parApply, parCapply, parLapply,\n",
+      "    parLapplyLB, parRapply, parSapply, parSapplyLB\n",
       "\n",
       "\n",
       "The following objects are masked from ‘package:stats’:\n",
@@ -56,9 +64,9 @@
       "Attaching package: ‘S4Vectors’\n",
       "\n",
       "\n",
-      "The following objects are masked from ‘package:base’:\n",
+      "The following object is masked from ‘package:base’:\n",
       "\n",
-      "    expand.grid, I, unname\n",
+      "    expand.grid\n",
       "\n",
       "\n",
       "\n",
@@ -95,19 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aab64ee9",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "geneID2GO <- readMappings(file = \"../References/topGO_Annotation_Files/Cre_gene2go\")\n",
+    "geneID2GO <- readMappings(file = \"../Reference_Files/Annotation_Files/Cre_gene2go\")\n",
     "geneNames <- names(geneID2GO)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9988e587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e6014c53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,22 +177,6 @@
     "    \n",
     "}\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08cf6012",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "776e9389",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -202,7 +191,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.1"
+   "version": "4.0.3"
   },
   "toc": {
    "base_numbering": 1,
